# tempopython

./: .gitignore  README.md  requirements.txt
data/: pg101.txt  pg103.txt  pg104.txt  pg106.txt  pg107.txt  pg108.txt  pg109.txt  pg110.txt  pg111.txt  pg112.txt  pg113.txt  pg115.txt  pg117.txt  pg118.txt  pg12.txt  pg121.txt  pg122.txt  pg123.txt  pg124.txt  pg125.txt  pg126.txt  pg128.txt  pg13.txt  pg130.txt  pg131.txt  pg133.txt  pg134.txt  pg136.txt  pg137.txt  pg138.txt  pg139.txt  pg14.txt  pg140.txt  pg141.txt  pg143.txt  pg144.txt  pg145.txt  pg146.txt  pg147.txt  pg148.txt  (+625 more)
echauffement/: administratif.txt  ameliorations.md  analyzer.py  compteurpoo.py  compteurtexte.py  compteurtextepoo.py  decorateurs.py  miniprojet.md  modeles.py  zendepython.py
fiches_backup/: 00-pythonic01.md  00-pythonic02.md  02-context-manager-fichier.md  03-context-manager-thread.md  05-context-manager-async.md  06-context-manager-aiomysql-transac.md  08-mutabilite.md  11-decorators.md  11-meta-classes-singleton.md  12-decorators-v2.md  13b-classes-dynamiques.md  18-duck-typing.md  20-fct-internes.md  21-fct-closures.md  30-GIL-Python.md  31-io-entrees-sorties.md  40-monitoring-tools.md  50-grpc-ameliorations.md  50-grpc-bases.md  71-generateurs.md  71b-generateurs-exemples.md  72c_decorateur_libs.md  75-typing-etc.md  77-monkey-patching.md  89-autosort2.md  99_5days.md
po/mon_projet/: pyproject.toml
projectaircraft/: aircrafts.csv  config.py  fakefileaircraft.py  flight_logs.txt  loadaircrafts.py  main.py  (+5 more)
src/phase2/p40_packaging/poetry_example/: README.md  pyproject.toml
(+472 files in other folders)
