[project]
name = "mon-projet"
version = "0.1.0"
description = "Test POETRY"
authors = [
    {name = "moi@moi.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pylint = "1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
